@@ -101,7 +101,9 @@ public class ProjectProperties {
 
     /** Sets The Target (Compiled) Files Directory */
     public void setTargetRoot(String targetRoot) {
-        this.targetRoot = targetRoot;
+        if (!StringUtil.isEmpty(targetRoot)) {
+            this.targetRoot = targetRoot;
+        }
     }
 
     /** Returns The Glossary Files Directory */
@@ -111,7 +113,9 @@ public class ProjectProperties {
 
     /** Sets The Glossary Files Directory */
     public void setGlossaryRoot(String glossaryRoot) {
-        this.glossaryRoot = glossaryRoot;
+        if (!StringUtil.isEmpty(glossaryRoot)) {
+            this.glossaryRoot = glossaryRoot;
+        }
     }
 
     /** Returns The Glossary File Location */
@@ -127,8 +131,10 @@ public class ProjectProperties {
     }
 
     /** Sets The Writeable Glossary File Location */
-    public void setWriteableGlossary (String writeableGlossaryFile) {
-        this.writeableGlossaryFile = writeableGlossaryFile;
+    public void setWriteableGlossary(String writeableGlossaryFile) {
+        if (!StringUtil.isEmpty(writeableGlossaryFile)) {
+            this.writeableGlossaryFile = writeableGlossaryFile;
+        }
     }
 
     /** Returns The Translation Memory (TMX) Files Directory */
@@ -138,7 +144,9 @@ public class ProjectProperties {
 
     /** Sets The Translation Memory (TMX) Files Directory */
     public void setTMRoot(String tmRoot) {
-        this.tmRoot = tmRoot;
+        if (!StringUtil.isEmpty(tmRoot)) {
+            this.tmRoot = tmRoot;
+        }
     }
     
   
@@ -159,7 +167,9 @@ public class ProjectProperties {
 
     /** Sets Dictionaries Files Directory */
     public void setDictRoot(String dictRoot) {
-        this.dictRoot = dictRoot;
+        if (!StringUtil.isEmpty(dictRoot)) {
+            this.dictRoot = dictRoot;
+        }
     }
 
     /** Returns the name of the Project */
@@ -194,7 +204,9 @@ public class ProjectProperties {
 
     /** Sets The Source (to be translated) Files Directory */
     public void setSourceRoot(String sourceRoot) {
-        this.sourceRoot = sourceRoot;
+        if (!StringUtil.isEmpty(sourceRoot)) {
+            this.sourceRoot = sourceRoot;
+        }
     }
 
     /**
